// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Review Warning Note Confirmation it should render the correct text if the decision was no 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation lbh-panel"
  >
    <div
      class="govuk-panel__body"
    >
      This Warning Note has been closed for Foo Bar
    </div>
  </div>
  <div
    style="display: flex; justify-content: space-between;"
  >
    <button
      class="lbh-button govuk-button lbh-button--secondary"
      data-module="govuk-button"
      style="min-width: 200px;"
    >
      Return to search
    </button>
    <button
      class="lbh-button govuk-button"
      data-module="govuk-button"
      style="min-width: 200px;"
    >
      View person
    </button>
  </div>
</DocumentFragment>
`;

exports[`Review Warning Note Confirmation should render the correct text if the review decision was yes 1`] = `
<DocumentFragment>
  <div
    class="govuk-panel govuk-panel--confirmation lbh-panel"
  >
    <div
      class="govuk-panel__body"
    >
      The Warning Note has been renewed for Foo Bar
    </div>
  </div>
  <div
    style="display: flex; justify-content: space-between;"
  >
    <button
      class="lbh-button govuk-button lbh-button--secondary"
      data-module="govuk-button"
      style="min-width: 200px;"
    >
      Return to search
    </button>
    <button
      class="lbh-button govuk-button"
      data-module="govuk-button"
      style="min-width: 200px;"
    >
      View person
    </button>
  </div>
</DocumentFragment>
`;
